Divider: namespace classes. Try different style. Fix z-index collisions with other UI.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,7 @@
 :root {
     --font-family: 'Montserrat';
     --ui-base-color: #303030;
+    --ui-highlight-color: yellow;
 }
 
 /* CORE */
